GBICSGO-336: add compliance checks to backup creation and add more information to backup view
